Fix resume section title and content alignment

--- a/css/resume.scss
+++ b/css/resume.scss
@@ -18,4 +18,5 @@
 
 .section-content {
   flex: 3;
+  padding-top: 5px;
 }
